--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
        <div class="icon1">✋</div>
        <div class="icon-title">Collect Feedback at Multiple Touchpoints</div>
        <div class="discription">Provide a comprehensive understanding of the customer experience.</div>
-       <img class="picture" src="/resources/photo_2.png">
+       <img class="picture" src="resources/photo_2.png">
 
       </div>
 
@@ -40,7 +40,7 @@
        <div class="icon2">🥅</div>
        <div class="icon-title">Ask Targeted and Specific Questions</div>
        <div class="discription">Avoid vague or open-ended questions that may not yield actionable insights.</div>
-       <img class="picture" src="/resources/photo_1.png">
+       <img class="picture" src="resources/photo_1.png">
       
       </div>
 
@@ -49,7 +49,7 @@
        <div class="icon3">💬</div>
        <div class="icon-title">Prioritize and Respond to Feedback</div>
        <div class="discription">Communicate the changes or improvements you've made in response to their feedback.</div>
-       <img class="picture" src="/resources/photo_3.png">
+       <img class="picture" src="resources/photo_3.png">
       
       </div>
    
